better docs
